--- a/src/blocks/Info-bar/info-bar.css
+++ b/src/blocks/Info-bar/info-bar.css
@@ -23,7 +23,13 @@
   }
 }
 
-@media screen and (max-width: 771px) {
+@media screen and (max-width: 1200px) {
+  .bar-info {
+    padding: 0 7vw;
+  }
+}
+
+@media screen and (max-width: 880px) {
   .bar-info {
     display: none;
   }
